adding parse prototype

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,3 +2,5 @@
   <%= react_component("ProductForm", {}, { prerender: true} ) %>
 <% end %>
 
+<%= link_to 'See all amazon products', products_path %>
+
