refactoring product parser

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -4,9 +4,9 @@
 <br/>
 
 <hr/>
-<h2>Product's List</h2>
+<h2>Products</h2>
 <% if @products.any? %>
   <%= render @products %>
 <% else %>
-  <span> There are no products registered. </span>
+  <span>There are no products registered.</span>
 <% end %>
