--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,10 +1,4 @@
-<%= react_component("ProductForm", {}, { prerender: true} ) %>
+<%= react_component("ProductForm", {}, { prerender: true } ) %>
 <br/>
 
-<hr/>
-<h2>Products</h2>
-<% if @products.any? %>
-  <%= render @products %>
-<% else %>
-  <span>There are no products registered.</span>
-<% end %>
+<%= react_component("ProductList", {products: @products}, { prerender: true } ) %>
